add function to load test cases from file.

--- a/HPB_EDH_UAT/HPB_EDH_UAT.csproj
+++ b/HPB_EDH_UAT/HPB_EDH_UAT.csproj
@@ -37,8 +37,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>libs\ApexUtilLib.dll</HintPath>
     </Reference>
+    <Reference Include="EPPlus, Version=4.5.2.1, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPPlus.4.5.2.1\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +62,8 @@
     <None Include="Certificates\healthier-choice_hpb_gov_sg.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <EmbeddedResource Include="Scenarios\EDH_BIDWH_HPB_UAT_REST_Scenarios_Conditions_v1.0.xlsx" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
