--- a/HPB_EDH_UAT/HPB_EDH_UAT.csproj
+++ b/HPB_EDH_UAT/HPB_EDH_UAT.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestCase.cs" />
+    <Compile Include="TestMethod.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
