--- a/HPB_EDH_UAT/packages.config
+++ b/HPB_EDH_UAT/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EPPlus" version="4.5.2.1" targetFramework="net461" />
+  <package id="ILMerge" version="3.0.21" targetFramework="net461" />
 </packages>
